[package]
name = "mqtt-client-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
mqtt-async-client = "0.3.1"
anyhow = "1"
url = "2"
rand = "0.8.5"
simplelog = "0.12.0"
log = "0.4.17"
sysinfo = "0.27.7"
env_logger = "0.10.0"
rumqttc = "0.20.0"
toml = "0.7.2"
serde = { version = "1.0", features = ["derive"] }